fix: overflow in subviews

--- a/scopes/component/ui/component-compare-overview/component-compare-overview.module.scss
+++ b/scopes/component/ui/component-compare-overview/component-compare-overview.module.scss
@@ -2,6 +2,7 @@
     margin-top: 16px;
     display: flex;
     height: 100%;
+    overflow: hidden;
   }
   
   .subContainerLeft {
@@ -19,4 +20,5 @@
   .subView {
     height: 100%;
     background-color: white;
+    overflow: auto;
   }
